# home-faerie

./: Cargo.toml  LICENSE  README.rst
.github/workflows/: ci.yml  release.yml
src/: main.rs  zigbee2mqtt.rs
