[package]
name = "house-daemon"
version = "0.1.0"
authors = ["Priit Laes <plaes@plaes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
main_error = "0.1.1"
rumqttc = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.5", features = [ "json", "postgres", "runtime-tokio-native-tls" ] }
