[package]
name = "home-faerie"
version = "0.3.0-dev"
authors = ["Priit Laes <plaes@plaes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
main_error = "0.1.2"
rand = "0.8.4"
rumqttc = "0.8.0"
serde_json = { version = "1.0" }
sqlx = { version = "0.5", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
